# aoc_2022

./: aoc2022.cabal
app/: Day1.hs  Day10.hs  Day13.hs  Day14.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
