cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2022
    main-is:          Main.hs
    other-modules:    Day1, Day2, Day3, Day4, Day5,
                      Day6, Day7, Day8, Day9, Day10,
                      Day11, Day12, Day13, Day14, Day15,
                      Day16, Day17, Day18, Day19, Day20,
                      Day21, Day22, Day23, Day24, Day25

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers
    hs-source-dirs:   app
    default-language: Haskell2010
